--- a/01-Example/Pipeline-Template/terraform-pipelines.yml
+++ b/01-Example/Pipeline-Template/terraform-pipelines.yml
@@ -21,6 +21,9 @@ stages:
       - job: validate
         continueOnError: false
         steps: 
+          - script: |
+              ls $(System.DefaultWorkingDirectory)
+             
           - task: TerraformInstaller@1
             inputs:
               terraformVersion: 'latest'
